--- a/package.json
+++ b/package.json
@@ -10,12 +10,16 @@
         "lint": "eslint --ext .js,.jsx,.ts,.tsx ./pages"
     },
     "dependencies": {
+        "jsdom": "^16.4.0",
         "next": "10.0.4",
+        "node-fetch": "^2.6.1",
         "react": "17.0.1",
         "react-dom": "17.0.1"
     },
     "devDependencies": {
+        "@types/jsdom": "^16.2.5",
         "@types/node": "^14.14.19",
+        "@types/node-fetch": "^2.5.7",
         "@types/react": "^17.0.0",
         "@typescript-eslint/eslint-plugin": "^4.11.1",
         "@typescript-eslint/parser": "^4.11.1",
