--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     },
     "dependencies": {
         "jsdom": "^16.4.0",
+        "mongodb": "^3.6.3",
         "next": "10.0.4",
         "node-fetch": "^2.6.1",
         "react": "17.0.1",
