--- a/package.json
+++ b/package.json
@@ -11,17 +11,23 @@
     },
     "dependencies": {
         "jsdom": "^16.4.0",
+        "leaflet": "^1.7.1",
+        "leaflet-defaulticon-compatibility": "^0.1.1",
         "mongodb": "^3.6.3",
         "next": "10.0.4",
         "node-fetch": "^2.6.1",
         "react": "17.0.1",
-        "react-dom": "17.0.1"
+        "react-dom": "17.0.1",
+        "react-leaflet": "^3.0.5",
+        "sax": "^1.2.4"
     },
     "devDependencies": {
         "@types/jsdom": "^16.2.5",
+        "@types/leaflet": "^1.5.19",
         "@types/node": "^14.14.19",
         "@types/node-fetch": "^2.5.7",
         "@types/react": "^17.0.0",
+        "@types/sax": "^1.2.1",
         "@typescript-eslint/eslint-plugin": "^4.11.1",
         "@typescript-eslint/parser": "^4.11.1",
         "eslint": "^7.17.0",
