--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
         "build": "next build",
         "start": "next start",
         "pretty": "prettier --write ./pages",
+        "start-db": "docker-compose up -d",
         "lint": "eslint --ext .js,.jsx,.ts,.tsx ./pages"
     },
     "dependencies": {
@@ -25,6 +26,7 @@
     "devDependencies": {
         "@types/jsdom": "^16.2.5",
         "@types/leaflet": "^1.5.19",
+        "@types/mongodb": "^3.6.3",
         "@types/node": "^14.14.19",
         "@types/node-fetch": "^2.5.7",
         "@types/react": "^17.0.0",
