--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "react": "17.0.1",
         "react-dom": "17.0.1",
         "react-leaflet": "^3.0.5",
+        "react-leaflet-textpath": "^2.0.0",
         "sax": "^1.2.4"
     },
     "devDependencies": {
