--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,7 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "jsx": "preserve"
+    "jsx": "preserve",
   },
   "include": [
     "next-env.d.ts",
@@ -27,5 +27,5 @@
   ],
   "exclude": [
     "node_modules"
-  ]
+  ],
 }
