--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
         "jsdom": "^16.5.3",
         "leaflet": "^1.7.1",
         "leaflet-defaulticon-compatibility": "^0.1.1",
+        "leaflet-draw": "^1.0.4",
         "mongodb": "^3.6.6",
         "next": "10.2.0",
         "node-fetch": "^2.6.1",
         "react": "17.0.2",
         "react-dom": "17.0.2",
         "react-leaflet": "^3.1.0",
+        "react-leaflet-draw": "^0.19.8",
         "react-leaflet-textpath": "^2.0.0",
         "sax": "^1.2.4",
         "xmldom": "^0.6.0"
@@ -33,6 +35,7 @@
         "@types/node": "^14.14.45",
         "@types/node-fetch": "^2.5.10",
         "@types/react": "^17.0.5",
+        "@types/react-dom": "^17.0.5",
         "@types/sax": "^1.2.1",
         "@types/xmldom": "^0.1.30",
         "@typescript-eslint/eslint-plugin": "^4.23.0",
